--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="body_background" >
 <!-- class="body_background"-->
 <div align="center">
-<h1>Paint</h1>
+<h1>BOARD</h1>
     <canvas id="myCanvas" width="800" height="600"></canvas>
         <br><br >
 
